--- a/client/main.html
+++ b/client/main.html
@@ -1,25 +1,31 @@
 <head>
-  <title>leaderboard</title>
+  <title>Leaderboard</title>
 </head>
-
 <body>
-  <h1>Welcome to Meteor!</h1>
+  <h1>Leaderboard</h1>
+  {{> addPlayerForm}}
+  {{> leaderboard}}
 
-  {{> hello}}
-  {{> info}}
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="addPlayerForm">
+  <form>
+    <input type="text" name="playerName">
+    <input type="submit" value="Add Player">
+  </form>
 </template>
 
-<template name="info">
-  <h2>Learn Meteor!</h2>
+
+<template name="leaderboard">
   <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
+    {{#each player}}
+    <li class="player {{selectedClass}}">{{name}}: {{score}}</li>
+    {{/each}}
+    <li>Selected Player: {{selectedPlayer.name}}</li>
+    <li>
+      <button class="increment">Give 5 Points</button>
+      <button class="decrement">Take 5 Points</button>
+      <button class="remove">Remove Player</button>
+    </li>
   </ul>
 </template>
